--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
         <link href="https://fonts.googleapis.com/css2?family=Kolker+Brush&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
-    <body>
-        <h1>hiii</h1>
+    <body style="background-color: #967E76;">
+        <section style="margin-left:10%;margin-right: 10%;">
+            <div class="container-md" style="margin-top:0;">
+        <nav class="navbar navbar-expand-md navbar-light bg-#2C3333" style="margin-top:0;">
+            <a class="navbar-brand" href="#" style="color: black;margin-left: 3;font-size: 4rem;font-family: 'Kolker Brush', cursive;"><b>R</b></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class = "nav-item"><a class="nav-link" href="#" style="color: black;">Hire Me <i class="fa-solid fa-arrow-right"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
     </body>
    </html>
