--- a/index.html
+++ b/index.html
@@ -31,5 +31,19 @@
             </div>
         </nav>
     </div>
+        <div style="margin-top: 3%;margin-bottom: 2%;border-radius: 10px;border:solid 1px" class="box">
+            <div style="margin-left: 2%;margin-top:2%;">
+            <h3>Hello I'm</h2>
+            <h1 style="font-size:5rem;"><div style="display:flex;"><p style="font-size: 10rem;font-family: 'Roboto Mono', monospace;color:#D7C08E;position: relative;display: inline;" class="fill">Rohith</p></div></h1>
+            </div>
+            <h2 style="margin-left: 20px;"><b>- Currently pursuing B.tech in SRM University-ktr</b></h2>
+            <hr width="10%" size="10" color="red"  style="border-top-width:0;">
+            <div>
+            <div style="border-radius: 50px;margin-left: 50px;margin-bottom: 30px;height: 50px;width: 50px;padding-top:11px;padding-left: 11px;box-shadow: 2px 2px 5px black;" class="instaicon"> <a href="#"><img src="instagram (2).png" alt="image" width="30px;" height="30px;"></a></div>
+            <div style="left: 250px;" class="icons"> <a href="#"><img src="email.png" alt="image" width="30px;" height="30px;"  style="position:relative;"></a></div>
+            <div style="left: 350px;" class="icons"> <a href="#"><img src="twitter.png" alt="image" width="30px;" height="30px;"  style="position:relative;"></a></div>
+            <div style="left: 450px;" class="icons"> <a href="#"><img src="linkedin (1).png" alt="image" width="30px;" height="30px;"  style="position:relative;"></a></div>
+            </div>
+        </div>
     </body>
    </html>
