--- a/index.html
+++ b/index.html
@@ -45,5 +45,22 @@
             <div style="left: 450px;" class="icons"> <a href="#"><img src="linkedin (1).png" alt="image" width="30px;" height="30px;"  style="position:relative;"></a></div>
             </div>
         </div>
+            <div style="text-align: center;margin-bottom: 100px;">
+            <h1>About Me</h1>
+            <div>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+                <p>******************************</p>
+            </div>
+        </div>
     </body>
    </html>
