--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
                 <p>******************************</p>
             </div>
         </div>
+        <hr width="7%" size="10" color="red" style="border-top-width:0;margin-left: 550px;margin-top:100px;">
     </body>
    </html>
