--- a/index.html
+++ b/index.html
@@ -63,5 +63,25 @@
             </div>
         </div>
         <hr width="7%" size="10" color="red" style="border-top-width:0;margin-left: 550px;margin-top:100px;">
+        <h1 style="text-align: center;margin-bottom: 50px;">Good At</h1>
+        <div class="container text-center">
+            <div class="row justify-content-md-center">
+              <div class="col-lg-4 col-sm-12 goodat">
+                <img src="illustration.png" alt="design" width="40px" height="40px">
+                <p style="color: white;margin-top: 30px;font-size: 30px;">Graphic Design</p>
+                <p style="color: white;">I helped developing the overall layout and production design for applications such as advertisements, brochures, magazines, and reports.</p>
+              </div>
+              <div class="col-lg-4 col-sm-12 goodat">
+                <img src="programming.png" alt="design" width="40px" height="40px">
+                <p style="color: white;margin-top: 10px;font-size: 30px;">Competitive Programming</p>
+                <p style="color: white;">The aim of competitive programming is to write source code of computer programs which are able to solve given problems. </p>
+              </div>
+              <div class="col-lg-4 col-sm-12 goodat">
+                <img src="web-design (1).png" alt="design" width="40px" height="40px">
+                <p style="color: white;margin-top: 30px;font-size: 30px;">Web Design</p>
+                <p style="color: white;"> I'm created few designs and layouts of a website or web pages.</p>
+              </div>
+            </div>
+          </div>
     </body>
    </html>
