--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
               </div>
             </div>
           </div>
+          <hr width="7%" size="10" color="red" style="border-top-width:0;margin-left: 550px;margin-top:100px;">
     </body>
    </html>
