--- a/index.html
+++ b/index.html
@@ -84,5 +84,30 @@
             </div>
           </div>
           <hr width="7%" size="10" color="red" style="border-top-width:0;margin-left: 550px;margin-top:100px;">
+          <h1 style="text-align: center;margin-bottom: 50px;">My Works</h1>
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"  style="margin-left: 200px;margin-right:200px;margin-bottom: 50px;">
+            <div class="carousel-inner">
+              <div class="carousel-item active slides">
+                    <p style="font-size:2rem;font-family: 'Roboto Mono', monospace;"><i class="fa-brands fa-github"></i> GitHub</p>
+                    <button type="button" class="btn btn-primary btn-lg" style="position: absolute;top:200px;left:500px;">Show More</button>
+              </div>
+              <div class="carousel-item slides">
+                <p style="font-size:2rem; font-family: 'Roboto Mono', monospace"><i class="fa-brands fa-hackerrank"></i> Hackerrank</p>
+                <button type="button" class="btn btn-primary btn-lg" style="position: absolute;top:200px;left:500px;">Show More</button>
+              </div>
+              <div class="carousel-item slides">
+                <p style="font-size:2rem; font-family: 'Roboto Mono', monospace"><i class="fa-solid fa-code"></i> CodeChef</p>
+                <button type="button" class="btn btn-primary btn-lg" style="position: absolute;top:200px;left:500px;">Show More</button>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </body>
    </html>
