--- a/index.html
+++ b/index.html
@@ -109,5 +109,38 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <h1 align="center" style="margin-top: 100px;margin-bottom:40px;">Skills & Tools</h1>
+          <div class="container text-center">
+            <div class="row justify-content-md-center">
+              <div class="col-lg-4 col-sm-12 skillsandtools">
+                <img src="button.png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                <p style="font-size:25px;"><b>C</b></p>
+              </div>
+              <div class="col-lg-4 col-sm-12 skillsandtools">
+                <img src="button.png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                <p style="font-size:25px;"><b>C++</b></p>
+              </div>
+              <div class="col-lg-4 col-sm-12 skillsandtools">
+                <img src="button.png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                <p style="font-size:25px;"><b>Java</b></p>
+              </div>
+            </div>
+          </div>
+          <div class="container text-center">
+            <div class="row justify-content-md-center">
+              <div class="col-lg-4 col-sm-12 skillsandtools">
+                <img src="button.png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                <p style="font-size:25px;"><b>Python</b></p>
+              </div>
+              <div class="col-lg-4 col-sm-12 skillsandtools">
+                <img src="button.png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                <p style="font-size:25px;"><b>Html</b></p>
+              </div>
+              <div class="col-lg-4 col-sm-12 skillsandtools">
+                <img src="button.png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                <p style="font-size:25px;"><b>CSS</b></p>
+              </div>
+            </div>
+          </div>
     </body>
    </html>
