--- a/index.html
+++ b/index.html
@@ -142,5 +142,20 @@
               </div>
             </div>
           </div>
+          <h1 align="center" style="margin-top: 100px;margin-bottom:50px;">Work Experience</h1>
+          <div class="container text-center">
+            <div class="row justify-content-md-center">
+              <div class="col-lg-12 workexp">
+                <p style="color: white;">drop your skills</p>
+              </div>
+            </div>
+          </div>
+          <div class="container text-center">
+            <div class="row justify-content-md-center">
+              <div class="col-lg-12 workexp">
+                <p style="color: white;">drop your skills</p>
+              </div>
+            </div>
+          </div>
     </body>
    </html>
