--- a/index.html
+++ b/index.html
@@ -157,5 +157,17 @@
               </div>
             </div>
           </div>
+         <h1 align="center" style="margin-top: 120px;margin-bottom:50px;">Testimonials</h1>
+          <div class="container text-center">
+            <div class="row justify-content-md-center">
+              <div class="col-lg-6 testimonials">
+                <p style="color: white;">“ Validation partnership social media burn rate traction gamification supply chain deployment paradigm shift startup pitch stock mass market assets. Twitter metrics partnership strategy business plan rockstar non-disclosure agreement equity termsheet incubator stock bootstrapping. “</p>
+              </div>
+              <div class="col-lg-6 testimonials">
+                <p style="color: white;">“ Validation partnership social media burn rate traction gamification supply chain deployment paradigm shift startup pitch stock mass market assets. Twitter metrics partnership strategy business plan rockstar non-disclosure agreement equity termsheet incubator stock bootstrapping. “</p>
+              </div>
+            </div>
+          </div>
+          </section>
     </body>
    </html>
