--- a/index.html
+++ b/index.html
@@ -169,5 +169,29 @@
             </div>
           </div>
           </section>
+        <div style="background-color: gray;margin-bottom: 0;">
+                  <div class="container text-center" >
+                    <div class="row justify-content-md-center">
+                      <div class="col-lg-4 col-sm-12" style="padding: 60px;">
+                        <p style="font-size: 3rem;"><b>Get in Touch</b></p>
+              <p>These are my social media handles:</p>
+              <div style="height:100px;">
+                <div style="border-radius: 50px;margin-left: 16px;margin-bottom: 30px;height: 50px;width: 50px;padding-top:11px;padding-left: 1px;box-shadow: 2px 2px 5px black;" class="instaicon"> <a href="#"><img src="instagram (2).png" alt="image" width="30px;" height="30px;"></a></div>
+                <div style="border-radius: 50px;margin-left: 16px;margin-bottom: 12px;height: 50px;width: 50px;position: relative;bottom: 80px;left: 80px;padding-top:11px;padding-left: 1px;box-shadow: 2px 2px 5px black;" class="bottomicons"> <a href="#"><img src="email.png" alt="image" width="30px;" height="30px;"  style="position:relative;"></a></div>
+                <div style="border-radius: 50px;margin-left: 16px;margin-bottom: 12px;height: 50px;width: 50px;position: relative;bottom: 142px;left: 160px;padding-top:11px;padding-left: 1px;box-shadow: 2px 2px 5px black;" class="bottomicons"> <a href="#"><img src="twitter.png" alt="image" width="30px;" height="30px;"  style="position:relative;"></a></div>
+                <div style="border-radius: 50px;margin-left: 16px;margin-bottom: 12px;height: 50px;width: 50px;position: relative;bottom: 204px;left: 240px;padding-top:11px;padding-left: 1px;box-shadow: 2px 2px 5px black;" class="bottomicons"> <a href="#"><img src="linkedin (1).png" alt="image" width="30px;" height="30px;"  style="position:relative;"></a></div>
+                </div>
+              </div>
+                  <div class="col-lg-4 col-sm-12 extra" style="margin-left: 200px;">
+                    <img src="instagram (1).png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                    <a href="#" style="text-decoration: none;"><p style="color:white;margin-top: 10px;">__r.o.h.i.t.h_</p></a>
+                      </div>
+                      <div class="col-lg-4 col-sm-12 extra">
+                        <img src="email (1).png" alt="design" width="40px" height="40px" style="margin: 35px 0 20px 0;">
+                        <a href="mailto:gz0921@srmist.edu.in" style="text-decoration: none;"><p style="color:white;margin-top: 10px;">gz0921@srmist.edu.in</p></a>
+                      </div>
+                    </div>
+                  </div>
+              </div>
     </body>
    </html>
